Fixed bug #70965 (yield from with a common iterator primes too much)